--- a/css/own.css
+++ b/css/own.css
@@ -15,7 +15,7 @@ h3 {
     background-color: #0b0b0b;
     color: whitesmoke;
     font-weight: bold;
-    font-family: "Lucida Console";
+    font-family: "Courier New";
     font-size: 20px;
     padding-top: 3px;
     padding-bottom: 3px;
@@ -43,7 +43,7 @@ ul {
 
 h1 {
     font-size: 45px;
-    font-family: "Lucida Console";
+    font-family: "Courier New";
 }
 
 hr {
